--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,21 +1,22 @@
 #app {
   // 主体区域
   .main-container {
-    min-height: 100%;
     transition: margin-left .28s;
-    margin-left: 180px;
+    //margin-left: 250px;
     position: relative;
+    height: 100%;
+    overflow: auto;
   }
   // 侧边栏
   .sidebar-container {
     transition: width 0.28s;
-    width: 180px !important;
+    width: 250px !important;
     height: 100%;
-    position: fixed;
+    //position: fixed;
     font-size: 0px;
-    top: 0;
-    bottom: 0;
-    left: 0;
+    //top: 100px;
+    //bottom: 0;
+    //left: 0;
     z-index: 1001;
     overflow: hidden;
     //reset element-ui css
