--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -82,14 +82,23 @@
 .margin-top-20{
   margin-top: 20px;
 }
+.margin-top-40{
+  margin-top: 40px;
+}
 .margin-top-50{
   margin-top: 50px;
 }
 .margin-bottom-10{
   margin-bottom: 10px;
 }
+.margin-bottom-20{
+  margin-bottom: 20px;
+}
 .margin-bottom-25{
   margin-bottom: 25px;
+}
+.margin-bottom-50{
+  margin-bottom: 50px;
 }
 .margin-left-10{
   margin-left: 10px;
@@ -99,6 +108,13 @@
 }
 .margin-right-50{
   margin-right: 50px;
+}
+.padding-50{
+  padding: 50px;
+}
+.padding-row-50{
+  padding-left: 50px;
+  padding-right: 50px;
 }
 .padding-left-50{
   padding-left: 50px;
@@ -150,4 +166,12 @@
 }
 .pointer{
   cursor: pointer;
+}
+
+//  定位
+.top-25{
+  top: 25px;
+}
+.bottom--25{
+  bottom: -25px;
 }
