--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -106,8 +106,14 @@
 .margin-left-20{
   margin-left: 20px;
 }
+.padding-left-15{
+  padding-left: 15px;
+}
 .margin-right-50{
   margin-right: 50px;
+}
+.padding-right-15{
+  padding-right: 15px;
 }
 .padding-50{
   padding: 50px;
@@ -122,13 +128,43 @@
 .padding-right-50{
   padding-right: 50px;
 }
+.padding-right-30{
+  padding-right: 30px;
+}
+.padding-bottom-30{
+  padding-bottom: 30px;
+}
+.padding-bottom-20{
+   padding-bottom: 20px;
+ }
+.padding-bottom-10{
+  padding-bottom: 10px;
+}
 .padding-left-100{
   padding-left: 100px;
+}
+.padding-left-40{
+  padding-left: 40px;
+}
+.padding-left-30{
+  padding-left: 30px;
 }
 
 .padding-row-30{
   padding-left: 30px;
   padding-right: 30px;
+}
+.padding-row-20{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.padding-row-15{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.padding-row-10{
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
@@ -177,4 +213,10 @@
 }
 .bottom--25{
   bottom: -25px;
+}
+
+
+// list
+.list-style-none{
+  list-style: none;
 }
