--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -193,4 +193,12 @@ code {
   z-index: 1000 !important;
 }
 
+.main-bgcolor{
+  background-color: rgba(240,244,247,1);
+}
+.main-padding{
+  padding: 10px;
+}
+
+
 
